# covplan

./: .readthedocs.yaml  README.md  angles.py  contributing.md  dubins_path_planner.py  field.py  gc_4.py  lines.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: about.md  desc.md  index.md  usage.md
files/: mfield.txt
paper/: main.tex  paper.md  refs.bib
src/cc_pathplanner/: coverage_path_planner.py  field.py
src/cc_pathplanner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cc_pp.egg-info/: PKG-INFO  SOURCES.txt
src/ccpp.egg-info/: PKG-INFO  SOURCES.txt
src/ccpp_tsp.egg-info/: PKG-INFO  SOURCES.txt
src/covplan/: coverage_path_planner.py  dubins_path_planner.py  field.py  lines.py  main.py  sample_area.txt
src/covplan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cpp/: angles.py  coverage_path_planner.py  dubins_path_planner.py  field.py  find_min.py  lines.py  main.py  sample_area.txt
tests/: test_field.py  test_line.py  test_main.py  test_plan.py
